--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-python-dotenv==1.0.1
-langchain==0.3
-langchain-community==0.3
-praw==7.7.1
-langchain-databricks==0.1.0
-google-api-python-client
-newsapi-python
-pytest==8.3.3
-mlflow==2.17
-pytrends
-newsapi-python
-duckduckgo-search
-feedparser
-nltk
-threadpoolctl
-spacy==3.7
-gensim
-textblob
-transformers
-torch==2.0.1
+fastapi
+pydantic-settings
+redis
+langchain_ollama
+uvicorn
+websockets
+pydantic
+sqlalchemy
+psycopg2
+asyncpg
+sqlalchemy[asyncio]
+alembic
+pydantic[email]
+bcrypt
+PyJWT
+python-multipart
+langchain
