--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:prod": "NEXT_PUBLIC_ENV=production next dev"
   },
   "dependencies": {
     "axios": "^1.7.7",
